[package]
name = "unique"
version = "0.1.0"
authors = ["Claudio F S Rodrigues <claudiofsrodrigues@gmail.com>"]
edition = "2021"
description = "Filter (exclude) repeated lines from FILE (or standard input)"
homepage = "https://github.com/claudiofsr/unique"
repository = "https://github.com/claudiofsr/unique"
license = "MIT license"
keywords = ["uniq", "unique", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# https://docs.rs/clap/latest/clap/_features/index.html
clap = { version = "4.0.18", features = ["derive", "color"] }
ring = "0.16.20"
blake3 = { version = "1.3.1", features = ["rayon"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1.4"

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "s"   # Optimize for size
lto = true        # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
# debug = true