[package]
name = "unique"
version = "0.1.0"
authors = ["Claudio F S Rodrigues <claudiofsrodrigues@gmail.com>"]
edition = "2021"
description = "Read lines from FILE (or standard input) removing any repeated lines according to the Options."
homepage = "https://github.com/claudiofsr/unique"
repository = "https://github.com/claudiofsr/unique"
license = "MIT license"
keywords = ["uniq", "unique", "cli"]
categories = ["command-line-utilities"]

[dependencies]
claudiofsr_lib = "0.19"
anstyle = "1.0"
csv = "1.4"
blake3 = { version = "1.8", features = ["rayon"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
execution-time = "0.3"
regex = { version = "1.12", features = ["unicode"] }
rayon = "1.11"
thiserror = "2.0"

[dependencies.clap]
version = "4.6"
features = [
    "derive", 
    "color",
]

[dependencies.chrono]
version = "0.4"
features = [
    "serde",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dev-dependencies]
# Usado apenas para os testes unitários (proposto anteriormente)
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
debug = false           # No debug info at all.
strip = "symbols"       # Strip symbols from a binary.
opt-level = 3           # All optimizations.
overflow-checks = true  # Panic will occur on overflow.
lto = true              # Enable link time optimization.
codegen-units = 1       # Use a single codegen for size optimization.
panic = "abort"         # Remove traceback information.
incremental = true      # Save information to disk, improving re-compile times.

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
